<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:padding="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context=".MainActivity" >

        <TextView
            android:id="@+id/demographicDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:text="@string/demographicDesc" />

        <TextView
            android:id="@+id/validatorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="#ff0000"
            android:visibility="invisible"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:text="@string/validatorMessage" />

        <CheckBox
            android:id="@+id/deviceAdminCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="onDeviceAdminCheckboxClicked"
            android:text="@string/deviceAdminHint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:text="@string/emailHint" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:inputType="textEmailAddress"
            android:focusable="true"/>

        <EditText
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:inputType="number" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/gender" />

            <Spinner
                android:id="@+id/genderSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/gender"
                android:entries="@array/gender_array" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/education"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/education" />

            <Spinner
                android:id="@+id/educationSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/education"
                android:entries="@array/education_array" />
        </RelativeLayout>

        <EditText
            android:id="@+id/job"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/major_hint"
            android:inputType="text"
            android:layout_margin="@dimen/activity_vertical_margin" />

        <Button
            android:id="@+id/upload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openProgress"
            android:text="@string/submit" />

    </LinearLayout>


</ScrollView>
